--- a/style.css
+++ b/style.css
@@ -1,7 +1,19 @@
 ul {
     text-align: center;
+    list-style: none;
   }
 
   h1{
     text-align: center;
+    font-family: sans-serif;
   }
+body{
+  color: rgb(15, 15, 15);
+  background-image: linear-gradient(75deg, pink,lightskyblue, lavender);
+}
+
+p{
+  font-family: sans-serif;
+  font-size: smaller;
+}
+
