--- a/style.css
+++ b/style.css
@@ -6,14 +6,21 @@ ul {
   h1{
     text-align: center;
     font-family: sans-serif;
+    padding-left: 50px;
   }
 body{
   color: rgb(15, 15, 15);
   background-image: linear-gradient(75deg, pink,lightskyblue, lavender);
 }
 
-p{
-  font-family: sans-serif;
-  font-size: smaller;
+.container{
+  text-align: center;
+  padding-left: 40px;
 }
 
+#answer{
+  padding: 50px;
+  font-family: 'Courier New', Courier, monospace;
+  text-align: justify;
+  display: inline-block;
+}
